[gd_scene load_steps=23 format=3 uid="uid://bc0sc1t1gdja4"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_3sdl6"]
[ext_resource type="Script" path="res://Scripts/Utilities/Player/Aim.gd" id="2_374lj"]
[ext_resource type="Script" path="res://Scripts/Utilities/Player/PlayerStateMachine.gd" id="3_r4oka"]
[ext_resource type="Script" path="res://Scripts/States/Player/RunState.gd" id="4_wvjsy"]
[ext_resource type="Script" path="res://Scripts/States/Player/BlockState.gd" id="5_8jnx5"]
[ext_resource type="Script" path="res://Scripts/States/Player/AirState.gd" id="5_3321d"]
[ext_resource type="Script" path="res://Scripts/States/Player/DashState.gd" id="6_sgl47"]
[ext_resource type="Script" path="res://Scripts/Timers/Player/DashCooldown.gd" id="7_6btxp"]
[ext_resource type="Script" path="res://Scripts/States/Player/SlideState.gd" id="8_th6x2"]
[ext_resource type="Script" path="res://Scripts/States/Player/RespawnState.gd" id="9_gfxja"]
[ext_resource type="Script" path="res://Entities/Player/DiveState.gd" id="10_ax0lo"]
[ext_resource type="Script" path="res://Scripts/States/Player/CancelState.gd" id="10_or0ok"]
[ext_resource type="Script" path="res://Scripts/Timers/Player/CancelCooldown.gd" id="11_motqc"]
[ext_resource type="Script" path="res://Scripts/Timers/Player/BlockCooldown.gd" id="12_o7gqj"]
[ext_resource type="Script" path="res://Scripts/States/Player/StunnedState.gd" id="13_vjhep"]
[ext_resource type="Script" path="res://Scripts/StateDubugLabel.gd" id="14_yvx7c"]
[ext_resource type="Script" path="res://Scripts/Utilities/Player/PlayerAction.gd" id="15_af7lr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h3myt"]
radius = 31.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eceab"]
radius = 12.0
height = 38.0

[sub_resource type="CanvasTexture" id="CanvasTexture_70t8f"]

[sub_resource type="CanvasTexture" id="CanvasTexture_5y63k"]

[sub_resource type="GDScript" id="GDScript_33vhp"]
script/source = "extends PlayerState

class_name StompStat

func on_enter():
	player.velocity.x = 0
	$StompWindup.start()

func state_process(delta):
	if player.is_on_floor():
		next_state = run_state


func start_stomp():
	player.velocity.y = 1200
"

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "jump_state", "dash_state", "respawn_state", "block_state", "cancel_state", "right", "left", "jump", "dash", "slide", "stomp", "block", "cancel", "look_up", "look_down", "look_left", "look_right")]
script = ExtResource("1_3sdl6")
state_machine = NodePath("PlayerStateMachine")
jump_state = NodePath("PlayerStateMachine/AirState")
dash_state = NodePath("PlayerStateMachine/DashState")
respawn_state = NodePath("PlayerStateMachine/RespawnState")
block_state = NodePath("PlayerStateMachine/BlockState")
cancel_state = NodePath("PlayerStateMachine/CancelState")
right = NodePath("Controls/MoveRightAction")
left = NodePath("Controls/MoveLeftAction")
jump = NodePath("Controls/JumpAction")
dash = NodePath("Controls/DashAction")
slide = NodePath("Controls/SlideAction")
stomp = NodePath("Controls/StompAction")
block = NodePath("Controls/BlockAction")
cancel = NodePath("Controls/CancelAction")
look_up = NodePath("Controls/LookUpAction")
look_down = NodePath("Controls/LookDownAction")
look_left = NodePath("Controls/LookLeftAction")
look_right = NodePath("Controls/LookRightAction")
SPEED = 800.0
ACCELERATION = 15.0
DECELERATION = 50.0
JUMP_BUFFER_TIME = null
JUMP_VELOCITY = null
JUMP_HEIGHT = -100
DASH_SPEED = 1000
DASH_DURATION = 0.2
BLOCKTIME = null

[node name="Touch" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Touch"]
shape = SubResource("CapsuleShape2D_h3myt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eceab")

[node name="Body" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(22.1352, -31.7975)
texture = SubResource("CanvasTexture_70t8f")

[node name="Pivot" type="Node2D" parent="Body" node_paths=PackedStringArray("player")]
script = ExtResource("2_374lj")
player = NodePath("../..")

[node name="Hand" type="Sprite2D" parent="Body/Pivot"]
scale = Vector2(0.2, 0.15)
texture = SubResource("CanvasTexture_5y63k")

[node name="JumpBuffer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("player", "current_state")]
script = ExtResource("3_r4oka")
player = NodePath("..")
current_state = NodePath("AirState")

[node name="AirState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_3321d")
can_move = null
can_jump = null
can_dash = null
can_slide = false
can_stomp = null
can_cancel = null
can_block = null

[node name="BlockState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_8jnx5")

[node name="BlockCooldown" type="Timer" parent="PlayerStateMachine/BlockState" node_paths=PackedStringArray("player")]
wait_time = 8.0
one_shot = true
script = ExtResource("12_o7gqj")
player = NodePath("../../..")

[node name="CancelState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_or0ok")
can_move = false
can_jump = false
can_dash = false
can_slide = false
can_stomp = false
can_cancel = false
can_block = false

[node name="CancelTimer" type="Timer" parent="PlayerStateMachine/CancelState"]
wait_time = 0.5
one_shot = true

[node name="CancelCooldown" type="Timer" parent="PlayerStateMachine/CancelState" node_paths=PackedStringArray("player")]
wait_time = 10.0
one_shot = true
script = ExtResource("11_motqc")
player = NodePath("../../..")

[node name="DashState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("direction")]
script = ExtResource("6_sgl47")
direction = NodePath("../../Body/Pivot/Hand")
can_move = false
can_jump = false
can_slide = false

[node name="DashTimer" type="Timer" parent="PlayerStateMachine/DashState"]
one_shot = true

[node name="DashCoolDown" type="Timer" parent="PlayerStateMachine/DashState" node_paths=PackedStringArray("player")]
one_shot = true
script = ExtResource("7_6btxp")
player = NodePath("../../..")

[node name="DiveState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ax0lo")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]

[node name="RespawnState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_gfxja")
can_move = null
can_jump = null
can_dash = null
can_slide = null
can_stomp = null
can_cancel = null
can_block = null

[node name="RespawnTimer" type="Timer" parent="PlayerStateMachine/RespawnState"]
wait_time = 1.5
one_shot = true

[node name="RunState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_wvjsy")
can_move = null
can_jump = null
can_dash = null
can_slide = null
can_stomp = false
can_cancel = null
can_block = null

[node name="SlideState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_th6x2")
deceleration = 10
can_move = false
can_dash = false
can_slide = false

[node name="SlideTimer" type="Timer" parent="PlayerStateMachine/SlideState"]

[node name="StompState" type="Node" parent="PlayerStateMachine"]
script = SubResource("GDScript_33vhp")
can_move = false
can_jump = false
can_dash = false
can_slide = false

[node name="StompWindup" type="Timer" parent="PlayerStateMachine/StompState"]
wait_time = 0.1
one_shot = true

[node name="StunnedState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_vjhep")
can_move = false
can_jump = false
can_dash = false
can_slide = false
can_stomp = false
can_block = false

[node name="StunTimer" type="Timer" parent="PlayerStateMachine/StunnedState"]

[node name="StateDubugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -49.0
offset_top = -56.0
offset_right = 79.0
offset_bottom = -30.0
text = "State: "
script = ExtResource("14_yvx7c")
state_machine = NodePath("../PlayerStateMachine")

[node name="Controls" type="Node" parent="."]

[node name="MoveLeftAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="MoveRightAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="JumpAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="DashAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="SlideAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="StompAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="BlockAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="CancelAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="LookUpAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="LookDownAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="LookLeftAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[node name="LookRightAction" type="Node" parent="Controls"]
script = ExtResource("15_af7lr")
action = null

[connection signal="body_entered" from="Touch" to="." method="_on_touch_body_entered"]
[connection signal="timeout" from="PlayerStateMachine/BlockState/BlockCooldown" to="PlayerStateMachine/BlockState/BlockCooldown" method="on_timeout"]
[connection signal="timeout" from="PlayerStateMachine/CancelState/CancelTimer" to="PlayerStateMachine/CancelState" method="end_cancel"]
[connection signal="timeout" from="PlayerStateMachine/CancelState/CancelCooldown" to="PlayerStateMachine/CancelState/CancelCooldown" method="on_timeout"]
[connection signal="timeout" from="PlayerStateMachine/DashState/DashTimer" to="PlayerStateMachine/DashState" method="on_exit"]
[connection signal="timeout" from="PlayerStateMachine/DashState/DashCoolDown" to="PlayerStateMachine/DashState/DashCoolDown" method="on_timeout"]
[connection signal="timeout" from="PlayerStateMachine/RespawnState/RespawnTimer" to="PlayerStateMachine/RespawnState" method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/StompState/StompWindup" to="PlayerStateMachine/StompState" method="start_stomp"]
[connection signal="timeout" from="PlayerStateMachine/StunnedState/StunTimer" to="PlayerStateMachine/StunnedState" method="end_stun"]
